# neo

./: .dockerignore  .gitignore  Dockerfile  README.md  a.cpp  alembic.ini  check_fetches.py  pyproject.toml  run_neo_streamlit.cmd  streamlit_app.py  test_ai_coding_comparison.py  test_format.py  test_live_sources.py  test_quality_gate.py  test_verification.py
alembic/: env.py
app/: __init__.py  main.py  runtime.py
app/api/: deps.py
docs/: backend.md  deployment.md  frontend.md  manual-production-test-plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: check_repo_integrity.py
tests/: conftest.py  test_account_profiles.py  test_action_intent_safety.py  test_agent_framework.py  test_agent_planner.py  test_agents.py  test_api.py  test_chat_generation_recovery.py  test_chat_intent_routing.py  test_chat_persistence.py  test_chat_web_smoke.py  test_code_index.py  test_coding_agent.py  test_connector_contracts.py  test_core_integration.py  test_files.py  test_git_integration.py  test_llm.py  test_llm_defaults.py  test_llm_registry.py  test_memory_identity.py  test_memory_source_replacement.py  test_memory_transcript.py  test_memory_workflow.py  test_model_metadata.py  test_notes.py  test_patch_apply.py  test_patches.py  test_projects.py  test_recovery.py  test_repos.py  test_research_generic_comparison.py  test_rules.py  test_runtime_readiness.py  test_search_config.py  test_search_live_data.py  test_single_container_runtime.py  test_streamlit_sidebar.py  test_symbol_awareness.py  test_tasks.py  (+3 more)
(+405 files in other folders)
